# LeanSearch-v2

./: .gitignore  .gitmodules  README.md  config.example.yaml  config.yaml  pyproject.toml  requirements.txt
benchmark/: FATE-H.LICENSE  FATE-H.jsonl  MathlibMPR.json  MathlibMPR_Prop_ids.txt  MathlibQR.json  MathlibQR_shared171.json
docs/: colab_embed.md
scripts/: build_corpus.sh  export_jsonl_for_hf.py  reproduce_premise.py  reproduce_prove.py  reproduce_search.py  serve.sh
src/leansearchv2/: __init__.py  config.py  llm.py  pipeline.py  server.py  standard_client.py
src/leansearchv2/corpus/: __init__.py  build_cuvs.py  build_embeddings.py  informalize.py  jixia_extract.py  merge_to_jsonl.py
src/leansearchv2/corpus/templates/: definition.md.j2  instance.md.j2  lib.j2  technical_entry.md.j2  theorem.md.j2
src/leansearchv2/eval/: __init__.py  premise_metrics.py  search_metrics.py
src/leansearchv2/prove/: __init__.py  prompts.py  run.py  verifier.py
src/leansearchv2/reasoning/: __init__.py  decompose.py  filter.py  judge.py  prompts.py  run.py
